k8s-https/ingress-80.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-80
  namespace: three-tier-ns   # renamed namespace
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000
